# sports-championship

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml  setup_db.py
backend/app/: auth.py  database.py  dependencies.py  main.py
backend/app/adapters/: models.py  repositories.py  schemas.py
backend/app/adapters/routers/: auth.py  health.py
backend/app/application/: ports.py  services.py
backend/app/domain/: entities.py
backend/tests/: conftest.py
backend/tests/integration/: test_health.py  test_registration.py
backend/tests/unit/: test_auth_service.py  test_registration.py  test_user_entity.py
frontend/: .dockerignore  Dockerfile
scripts/: setup-env.sh
