[tool.poetry]
name = "sports-championship-api"
version = "0.1.0"
description = "High-integrity sports championship management system"
authors = ["Sports Team <dev@sports-championship.local>"]
readme = "README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = "0.24.0"
sqlmodel = "0.0.14"
sqlalchemy = "2.0.23"
psycopg2-binary = "2.9.9"
pydantic = "2.12.5"
pydantic-settings = "2.1.0"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = "1.7.4"
bcrypt = "4.1.1"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
mypy = "1.8.0"
ruff = "0.1.14"
safety = "3.7.0"
bandit = "1.7.5"
httpx = "0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]

[tool.ruff.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.ruff.isort]
known-first-party = ["app"]
